# solana_dev_notes

./: .gitignore  README.md  solana_account_model.md  solana_actions_blinks.md  solana_address_lookup_table.md  solana_cross_program_invocation.md  solana_develop_program.md  solana_fee.md  solana_learning.md  solana_program.md  solana_program_derived_address.md  solana_state_compression.md  solana_token.md  solana_transaction_and_instructions.md  solana_tx_retrying.md
aichat_go/: Makefile  README.md  go.mod  go.sum  index.html
aichat_go/chat/: main.go
aichat_go/chat_stream/: main_stream.go
aichat_go/client_stream/: client.go
aichat_go/server/: main.go
aichat_go/server_stream/: server.go
bonding_curve/: Idolx曲线定制.xlsx  README.md  bonding_curve.py  merged_bonding_curve.py  pyproject.toml  tune_bonding_crve.py
bonding_curve_calc/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
bonding_curve_calc_nextjs/: fanslandai_idl.json  package.json  pump_fun_idl.json
bonding_curve_calc_server/: package-lock.json  package.json  server.ts
demos/game/: Anchor.toml
demos/hello_world/: Cargo.toml  Makefile  README.md
demos/note/: Anchor.toml
demos/puppet/: Anchor.toml
demos/solana_web3js_demo/: README.md  index.js  package.json  sol_transfer.js
demos/spl-token-demo/: package-lock.json  package.json
demos/spl-token-exercise/: package.json
demos/spl-token-use/: README.md  index.mjs  jsconfig.json  package.json
docs/program_dev/: anchor.md  ask_ai_questions_about_anchor.md  debug.md  questions.md  setup_build_deploy_locally.md  (+1 more)
(+50 files in other folders)
