[tool.poetry]
name = "bonding-curve"
version = "0.1.0"
description = ""
authors = ["yqq <youngqqcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
